#560 сборка проекта тестов PW + WD